# wavtool-pl

./: .gitignore  AUTHORS  README  README.win32  configure.ac
src/: Makefile.am  wavtool-pl.c  wfd.c  wfh.c
